<resources>
    <string name="app_name">AppName17</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_name">临时名称</string>
    <string name="app_name_default1">向钱贷</string>
    <string name="username_default">请登录</string>
    <string name="text_size_title">18sp</string>
    <string name="login_fast">快捷登录</string>
    <string name="login_password">账号登录</string>
    <string name="login_username_hint">请输入手机号</string>
    <string name="identifying_code">请输入验证码</string>
    <string name="identifying_code_send">发送验证码</string>
    <string name="login">登录</string>
    <string name="slogan">急速借款，上好贷款管家</string>
    <string name="password_hint">6-20位密码</string>
    <string name="register">注册</string>
    <string name="forgive_password">忘记密码</string>
    <string name="telephone_cannot_be_empty">手机号码不能为空。</string>
    <string name="password_cannot_be_empty">密码不能为空。</string>
    <string name="illegal_phone_number">请输入11位手机号码</string>
    <string name="illegal_password">请输入6-20位密码</string>
    <string name="identifyingCode_cannot_be_empty">验证码不能为空</string>
    <string name="save">保存</string>
    <string name="personal_info">个人信息</string>
    <string name="data_is_empty">显示数据为空</string>
    <string name="now_refresh">更新中…</string>
</resources>
