<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:layout_marginStart="@dimen/margin_left_10"
            android:background="@null"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:background="@color/white"
        >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginStart="@dimen/margin_left_10"
            android:inputType="textPassword"
            android:background="@null"
            />
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_marginEnd="@dimen/margin_right_10"-->
            <!--android:text="@string/identifying_code_send"-->
            <!--android:textColor="@color/blue"-->
            <!--/>-->
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="5"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        >
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/login"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:weightSum="10"
        >
       <TextView
           android:id="@+id/tv_register"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:text="@string/register"
           android:gravity="center"
           android:layout_weight="2.5"
           />
        <View
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:background="@color/gray"
            android:layout_gravity="center"
            />
       <TextView
           android:id="@+id/tv_password_lost"
           android:layout_width="0dp"
           android:layout_height="match_parent"
           android:text="@string/forgive_password"
           android:gravity="center"
           android:layout_weight="2.5"
           />


    </LinearLayout>

</LinearLayout>